--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,4 +1,4 @@
 /********* This is for all Sass Variables ***********/
 
-$background-color: #000;
+$background-color: #FFF;
 $default-font-size: 62.5%;
