--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,4 +1,33 @@
 /********* This is for all Sass Variables ***********/
+/* =========== COLORS ==============*/
+$text-color: hsl(0, 0%, 100%);
+$text-color-alt: hsl(10, 0%, 95%);
+$heading-color: hsl(4, 80%, 51%);
+$bg-color: hsl(0, 0%, 4%);
 
-$background-color: #FFF;
-$default-font-size: 62.5%;
+/* =========== Font size /Family ================*/
+$body-font: Arial, Helvetica, sans-serif;
+$biggest-font-size: 2.25rem;
+$h1-font-size: 1.5rem;
+$h2-font-size: 1.25rem;
+$h3-font-size: 1rem;
+$normal-font-size: 0.938rem;
+$small-font-size: 0.853rem;
+$smaller-font-size: 0.75rem;
+
+/*========== Font weights ==========*/
+$font-medium: 500;
+$font-semi-bold: 600;
+$font-bold: 700;
+
+/*========== Margins ==========*/
+$mb-1: 0.5rem;
+$mb-2: 1rem;
+$mb-3: 1.5rem;
+$mb-4: 2rem;
+$mb-5: 2.5rem;
+$mb-6: 5rem;
+
+/*========== z index ==========*/
+$z-tooltip: 10;
+$z-fixed: 100;
