--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -1,1 +1,27 @@
 /********* This is for Reset ***********/
+@use '../abstracts' as a;
+*,
+::before,
+::after {
+  box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
+  font-size: 62.5%;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    position: relative;
+    line-height: 1.5;
+    font-family: a.$body-font;
+    background-color: a.$bg-color;
+    color: a.$text-color;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
