--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,2 +1,15 @@
 /********* This is for Typography ***********/
 
+h1,h2,h3,p,ul {
+  margin: 0;
+  padding: 0;
+}
+
+ul {
+  padding: 0;
+  list-style: none;
+}
+
+a,a:visited,a:active{
+  text-decoration: none;
+}
