--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,4 @@
-@use 'abstracts' as a;
+ @use 'abstracts' as a;
 @use 'base' as b;
 @use 'component' as c;
 @use 'layout' as l;
@@ -6,10 +6,17 @@
 @use 'themes' as t;
 @use 'vendors' as v;
 
-*{
-  background-color: a.$background-color;
-}
+// *{
+//   background-color: a.$background-color;
+// }
 
+p{
+    font-size: 10rem;
+}
+span{
+    color: a.$heading-color;
+    font-size: 3rem;
+}
 
 
 
