--- a/sass/component/_index.scss
+++ b/sass/component/_index.scss
@@ -1,3 +1,5 @@
+
+@forward '../component/animation';
 @forward '../component/buttons';
 @forward '../component/carousel';
 @forward '../component/cover';
