--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,1 +1,8 @@
 /********* This is Home specific styles ***********/
+
+.hero-box {
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 0 6rem;
+}
