--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -31,3 +31,16 @@ $mb-6: 5rem;
 /*========== z index ==========*/
 $z-tooltip: 10;
 $z-fixed: 100;
+
+@media screen and (min-width: 768px) {
+    :root {
+      --biggest-font-size: 4rem;
+      --h1-font-size: 2.25rem;
+      --h2-font-size: 1.5rem;
+      --h3-font-size: 1.25rem;
+      --normal-font-size: 1rem;
+      --small-font-size: .875rem;
+      --smaller-font-size: .813rem;
+    }
+  }
+  
