--- a/sass/layout/_background.scss
+++ b/sass/layout/_background.scss
@@ -3,6 +3,8 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  position: relative;
+  // z-index: -1;
   &__span {
     margin-top: -3rem;
     border: 0.3px dashed rgba(255, 255, 255, 0.05);
