--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -6,10 +6,10 @@ $heading-color: hsl(4, 80%, 51%);
 $bg-color: hsl(0, 0%, 4%);
 
 /* =========== Font size /Family ================*/
-$body-font: Arial, Helvetica, sans-serif;
+$body-font: Helvetica, sans-serif;
 $biggest-font-size: 2.25rem;
 $h1-font-size: 12.8rem;
-$h2-font-size: 1.25rem;
+$h2-font-size: 2rem;
 $h3-font-size: 1rem;
 $normal-font-size: 0.938rem;
 $small-font-size: 0.853rem;
