--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -28,4 +28,35 @@ a,a:visited,a:active{
 }
 
 
+.text__big {
+  font-size: 30rem;
+  font-weight: a.$font-bold;
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.text__main {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 45rem;
+}
+
+.text__sub {
+  position: absolute;
+  top: 22%;
+  right: 10%;
+  width: 45rem;
+}
+
+.text__red {
+  text-transform: capitalize;
+  position: absolute;
+  bottom: 6%;
+  right: 10%;
+  width: 45rem;
+  color: a.$heading-color;
+  font-size: 4rem;
+}
+
+
 
