--- a/sass/layout/_background.scss
+++ b/sass/layout/_background.scss
@@ -3,7 +3,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  height: 1000rem;
+  height: 800rem;
   display: flex;
   flex-direction: row;
   &__span {
@@ -17,4 +17,16 @@
       }
     }
   }
+}
+
+.bg-text {
+  font-size: 25rem;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  font-weight: 700;
+  line-height: .8;
+  z-index: -10;
+  text-align: end;
+  color: rgba(255, 255, 255, 0.2);
 }
