--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,8 +1,14 @@
 /********* This is Home specific styles ***********/
 
-.hero-box {
+.hero {
   position: absolute;
   top: 0;
   left: 0;
   margin: 0 6rem;
+}
+
+.hero-text {
+  height: 100vh;
+  width: 95vw;
+  
 }
