--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,7 +7,7 @@
 @use 'vendors' as v;
 
 // *{
-//   background-color: a.$background-color;
+//   background-color: a.$background-color; de
 // }
 
 
