--- a/sass/pages/_team.scss
+++ b/sass/pages/_team.scss
@@ -32,16 +32,19 @@
     display: flex;
     flex-direction: row;
     &--text {
+      display: flex;
       font-size: 1.7rem;
       letter-spacing: 1px;
-      margin-left: 1rem;
+      justify-content: center;
+      align-items: center;
+      margin: 3rem;
+      font-weight: 300;
     }
   }
 
   &__head2 {
     display: flex;
     flex-direction: column;
-    background-color: pink;
   }
 
   &__group {
@@ -63,11 +66,10 @@
     margin: 0;
     padding: 0;
     padding-top: 100%;
-    border-radius: 0.75rem;
   }  
 
   &__body {
-    width: 30%;
+    width: 32%;
     
     &--img {
       position: absolute;
@@ -75,36 +77,31 @@
       transition-property: all;
       transition-timing-function: ease-in-out;
       transition-duration: 0.5s;
-      border-radius: 0.8rem;
-      filter: grayscale(0);
+      filter: grayscale(100%);
     }
   
     &--item {
       background-color: a.$bg-color;
-      border-radius: 0.5rem;
       overflow: hidden;
       cursor: pointer;
       position: relative;
     }
   
     &--details {
-      padding: 0 4rem;
       color: #fff;
-      text-align: center;
     }
   }
 
   &__name {
-    font-weight: 800;
-    font-size: 2rem;
+    font-weight: 700;
+    font-size: 3rem;
     line-height: 4rem;
-    margin: 0.75rem 0 0.25rem;
   }
   
   &__role {
-    font-size: 1.5rem;
-    line-height: 1.25rem;
-    font-weight: 500;
+    font-size: 1.6rem;
+    line-height: 1;
+    font-weight: 700;
     color: a.$heading-color;
   }
 
@@ -149,7 +146,7 @@
       position: fixed;
       top: 0;
       left: 0;
-      min-height: 100vh;
+      min-height: 100%;
       width: 100%;
       display: none;
       justify-content: center;
@@ -210,7 +207,7 @@
 
 
 .team__body--item:hover .team__body--img {
-  filter: grayscale(100%);
+  filter: grayscale(0%);
 }
 
 
