--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,1 +1,118 @@
 /********* This is for Footer ***********/
+@use "../abstracts" as a;
+
+.footer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: 0 6rem;
+    &__container{
+        display: block;
+        &--upper{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 8rem 0;
+            column-gap: 30rem;
+            &_left {
+                align-self: flex-end;
+                font-size: 4rem;
+                transform: rotate(270deg);
+                // margin-right: 46rem;
+                margin-bottom: 5rem;
+            }
+            &_right{
+                display: flex;
+                flex-direction: column;
+                row-gap: 2rem;
+                .upper_right-item h3{
+                    font-size: 5rem;
+                    color: a.$heading-color;
+                }
+            }
+        }
+
+        &--lower{
+            display: block;
+            margin-top: 2rem;
+            position: relative;
+            &_mail h2{
+                font-size: 5rem;
+                width: 50%;
+                text-transform: capitalize;
+            }
+
+            &_input{
+                border: 1px solid #ccc;
+                width: max-content;
+                display: flex;
+                align-items: center;
+                column-gap: 1rem;
+                padding: 8px;
+                & .lower_input-btn{
+                    background-color: a.$heading-color;
+                    color: a.$text-color;
+                    padding: 10px;
+                    font-size: 1.5rem;
+                    border: none;
+                    cursor: pointer;
+                }
+
+                & .lower_input-form input{
+                    background-color: transparent;
+                    border: none;
+                    outline: none;
+                }
+                
+                .lower_input-form input:focus{
+                    color:#ffffff;
+                }
+                .lower_input-form input::placeholder{
+                    padding: 5px 0;
+                }
+
+                & .lower_input-icon i{
+                    font-size: 3rem;
+                    padding: 0 0 0 1.5rem ;
+                    color: a.$text-color;
+                }
+                & .lower_input-icon i:hover{
+                    transform: translateX(3%);
+                }
+            }
+
+            &_links{
+                & .footer__list{
+                    display: flex;
+                    align-items: center;
+                    gap: 2rem;
+                    position: absolute;
+                    right: 0;
+                    & ul{
+                        display: flex;
+                        flex-direction: column;
+                        gap: 0.8rem;
+                    }
+                    &-item{
+                        font-size: 1.5rem;
+                        font-weight: 700;
+                    }
+                }
+                & .footer__social{
+                    display: flex;
+                    gap: 1rem;
+                    position: absolute;
+                    right: 0;
+                    bottom: -170px;
+                }
+                & .footer__social a{
+                    color: a.$heading-color;
+                    font-size: 2rem;
+                }
+                & .footer__social a:hover{
+                    color: a.$text-color;
+                }
+            }
+        }
+    }
+}
