--- a/sass/component/_index.scss
+++ b/sass/component/_index.scss
@@ -3,3 +3,4 @@
 @forward '../component/buttons';
 @forward '../component/carousel';
 @forward '../component/cover';
+@forward '../component/preview';
