--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -1,1 +1,36 @@
 /********* This is for all Sass Mixin ***********/
+
+@mixin flex-row {
+  display: flex;
+  flex-direction: row;
+}
+
+@mixin flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
+@mixin div-initial {
+  top: 0;
+  left: 0;
+}
+
+@mixin div-center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+@mixin main-center{
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+
+@mixin mp {
+  margin: 0;
+  padding: 0;
+}
+
+
