--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,46 +1,39 @@
 /********* This is for all Sass Variables ***********/
-/* =========== COLORS ==============*/
-$text-color: hsl(0, 0%, 100%);
-$text-color-alt: hsl(10, 0%, 95%);
-$heading-color: hsl(4, 80%, 51%);
-$bg-color: hsl(0, 0%, 4%);
 
-/* =========== Font size /Family ================*/
-$body-font: Helvetica, sans-serif;
-$biggest-font-size: 2.25rem;
-$h1-font-size: 12.8rem;
-$h2-font-size: 2rem;
-$h3-font-size: 1rem;
-$normal-font-size: 0.938rem;
-$small-font-size: 0.853rem;
-$smaller-font-size: 0.75rem;
 
-/*========== Font weights ==========*/
-$font-medium: 500;
-$font-semi-bold: 600;
-$font-bold: 700;
+/* =========== Color ================*/
+$text-color: rgb(255, 255, 255);
+$bg-color: rgb(0, 0, 0);
+$tedx-red: rgb(230, 43, 30);
 
-/*========== Margins ==========*/
-$mb-1: 0.5rem;
-$mb-2: 1rem;
-$mb-3: 1.5rem;
-$mb-4: 2rem;
-$mb-5: 2.5rem;
-$mb-6: 5rem;
 
-/*========== z index ==========*/
-$z-tooltip: 10;
-$z-fixed: 100;
+/* =========== Font-size ================*/
+$small-font: 1.25rem;
+$default-font: 1.7rem;
+$name-font: 3rem;
+$des-font: 4rem;
+$main-font: 12.8rem;
+$big-font: 30rem;
 
-@media screen and (min-width: 768px) {
-    :root {
-      --biggest-font-size: 4rem;
-      --h1-font-size: 2.25rem;
-      --h2-font-size: 1.5rem;
-      --h3-font-size: 1.25rem;
-      --normal-font-size: 1rem;
-      --small-font-size: .875rem;
-      --smaller-font-size: .813rem;
-    }
-  }
-  
+
+
+
+/* =========== Font-weight ================*/
+$fw-3: 300;
+$fw-5: 500;
+$fw-6: 600;
+$fw-7: 700;
+
+/* =========== Margin ================*/
+$m-2: 2rem;
+$m-3: 3rem;
+$m-4: 4rem;
+$m-1: 1.5rem;
+$m-7: 7rem;
+$m-bot-1: 1rem;
+$m-bot-2: 2rem;
+
+/* =========== Padding ================*/
+$p-2: 2rem;
+
+
