--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -18,9 +18,9 @@ body {
     padding: 0;
     position: relative;
     line-height: 1.2;
-    font-family: a.$body-font;
-    background-color: a.$bg-color;
-    color: a.$text-color;
+    font-family: Helvetica, sans-serif;
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     overflow-x: hidden;
 }
 
