--- a/sass/component/_animation.scss
+++ b/sass/component/_animation.scss
@@ -1,5 +1,21 @@
+@keyframes popup {
+  0% {
+    transform: scale(1, 1);
+  }
+  50% {
+    transform: scale(1.1, 1.1);
+  }
+  100% {
+    transform: scale(1, 1);
+  }
+}
+
+
+
 .text__scroll {
   position: absolute;
   bottom: -10%;
   left: 0;
 }
+
+
