--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,9 +2,6 @@
 @use "../abstracts" as a;
 
 .footer {
-    position: absolute;
-    top: 0;
-    left: 0;
     margin: 0 6rem;
     &__container{
         display: block;
@@ -27,33 +24,33 @@
                 row-gap: 2rem;
                 .upper_right-item h3{
                     font-size: 5rem;
-                    color: a.$heading-color;
+                    color: a.$tedx-red;
                 }
             }
         }
 
         &--lower{
             display: block;
-            margin-top: 2rem;
+            margin-top: a.$m-2;
             position: relative;
             &_mail h2{
-                font-size: 5rem;
+                font-size: a.$des-font;
                 width: 50%;
                 text-transform: capitalize;
             }
 
             &_input{
-                border: 1px solid #ccc;
+                border: 1px solid #ccc;//to be edited
                 width: max-content;
                 display: flex;
                 align-items: center;
                 column-gap: 1rem;
                 padding: 8px;
                 & .lower_input-btn{
-                    background-color: a.$heading-color;
+                    background-color: a.$tedx-red;
                     color: a.$text-color;
                     padding: 10px;
-                    font-size: 1.5rem;
+                    font-size: a.$default-font;
                     border: none;
                     cursor: pointer;
                 }
@@ -72,7 +69,7 @@
                 }
 
                 & .lower_input-icon i{
-                    font-size: 3rem;
+                    font-size: a.$name-font;
                     padding: 0 0 0 1.5rem ;
                     color: a.$text-color;
                 }
@@ -94,8 +91,8 @@
                         gap: 0.8rem;
                     }
                     &-item{
-                        font-size: 1.5rem;
-                        font-weight: 700;
+                        font-size: a.$default-font;
+                        font-weight: a.$fw-7;
                     }
                 }
                 & .footer__social{
@@ -106,7 +103,7 @@
                     bottom: -170px;
                 }
                 & .footer__social a{
-                    color: a.$heading-color;
+                    color: a.$tedx-red;
                     font-size: 2rem;
                 }
                 & .footer__social a:hover{
