--- a/sass/pages/_blog.scss
+++ b/sass/pages/_blog.scss
@@ -1,99 +1,74 @@
 @use "../abstracts" as a;
 
-.blog{
+.blog {
     padding: 4rem;
-    &__wrapper{
-        display: flex;
-        // align-items: center;
-        // justify-content: center;
-        flex-direction: column;
-        gap: 2rem;
-
-        &--header h2{
-            font-size: 8rem;
-        }
-
-        &--body{
-            display: flex;
-            align-items: center;
-            gap: 4rem;
-            &-text{
-                align-self: flex-start;
-                width: 30%;
-                display: flex;
-                align-items: center;
-                flex-direction: column;
-                row-gap: 2rem;
-                & p{
-                    font-size: 1.5rem;
-                }
-                &_link{
-                    align-self: flex-start;
-
-                    & a{
-                        display: flex;
-                        align-items: center;
-                        gap: 1rem;
-                        color: a.$tedx-red;
-                        font-size: 1.5rem;
-                        & i{
-                            font-size: 2rem;
-                        }
-                        & i:hover{
-                            transform: translateX(3%);
-                        }
-                    }
-                }
-            }
-
-            &-image{
-                & figure img{
-                    width: 600px;
-                    height: 600px;
-                    position: relative;
-                }
-                &_next{
-                    & .next{
-                        background-color: #e62b1e;
-                        height: 200px;
-                        width: 200px;
-                        position: absolute;
-                        top: 50% left 50%;
-                        transform: translate(220%, -106%);
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
-                        cursor: pointer;
-                    }
-                    & p{
-                       font-size: 6rem;
-                    }
-                }
-            }
-
-            
-        }
-
-        &--stack{
-            width: 20%;
-            display: flex;
-            flex-direction: column;
-            text-align: center;
-            cursor: pointer;
-            // gap: 3rem;
-            & .stack{
-                padding: 3rem;
-                background-color: #e62b1e;
-                font-size: 3rem;
-            }
-            & .stack-2{
-                background-color: #fff;
-                color: #e62b1e
-                ;
-            }
-        }
-
-    
+    &__head {
+        margin: 5rem 0;
     }
-
+    &__header {
+        color: transparent;
+        font-weight: a.$fw-7;
+        font-size: a.$main-font;
+        line-height: 89.5%;
+        -webkit-text-stroke: 2px a.$text-color;
+        margin-bottom: a.$m-bot-2;
+    }
+    &__body {
+        @include a.flex-row;
+        justify-content: space-between;
+        // align-items: center;
+        // 
+    }
+    &__des {
+        width: 30%;
+        padding: 3rem 0;
+    }
+    &__text {
+        font-weight: a.$fw-3;
+        font-size: a.$default-font;
+        margin-bottom: 3rem;
+    }
+    &__link {
+        display: block;      
+        & span {
+            color: a.$tedx-red;
+            font-size: a.$name-font;
+        }
+        & i {
+            font-size: a.$name-font;
+            color: a.$tedx-red;
+            padding-left: a.$p-1;
+            align-items: center;
+            &:hover {
+                transform: translateX(3%);
+            }
+        }
+    }
+    &__img {
+        position: relative;
+        width: 100%;
+    }
+    &__next {
+        
+        position: absolute;
+        bottom: 1.2rem;
+        right: 4rem;
+        background-color: a.$tedx-red;
+        cursor: pointer;
+        height: 30rem;
+        width: 30rem;
+        font-size: a.$main-font;
+        color: transparent;
+        @include a.main-center;
+        align-items: center;
+        -webkit-text-stroke: 2px a.$text-color;
+        
+        
+    }
 }
+
+
+
+
+
+
