--- a/sass/layout/_sidebar.scss
+++ b/sass/layout/_sidebar.scss
@@ -8,9 +8,11 @@
     background-color: a.$tedx-red;
     height: 30rem;
     width: 50%;
+    border: 1px solid a.$tedx-red;
 
     &--white {
       background-color: a.$text-color;
+      border: 1px solid a.$text-color;
     }
   }
 
