--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -12,6 +12,7 @@ $small-font: 1.25rem;
 $default-font: 1.7rem;
 $name-font: 3rem;
 $des-font: 4rem;
+$next-font: 7rem;
 $main-font: 12.8rem;
 $big-font: 30rem;
 
