--- a/sass/pages/_blog.scss
+++ b/sass/pages/_blog.scss
@@ -49,21 +49,18 @@
         width: 100%;
     }
     &__next {
-        
         position: absolute;
-        bottom: 1.2rem;
-        right: 4rem;
+        bottom: 0;
+        right: 0;
         background-color: a.$tedx-red;
         cursor: pointer;
-        height: 30rem;
-        width: 30rem;
-        font-size: a.$main-font;
+        height: 20rem;
+        width: 20rem;
+        font-size: a.$next-font;
         color: transparent;
         @include a.main-center;
         align-items: center;
         -webkit-text-stroke: 2px a.$text-color;
-        
-        
     }
 }
 
