--- a/sass/pages/_team.scss
+++ b/sass/pages/_team.scss
@@ -21,7 +21,7 @@
   &__group {
     @include a.flex-row;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
     margin: 4rem 0;
     
   }
