--- a/sass/pages/_blog.scss
+++ b/sass/pages/_blog.scss
@@ -2,10 +2,12 @@
 
 .blog {
     padding: 4rem;
+    position: relative;
     &__head {
         margin: 5rem 0;
     }
     &__header {
+        text-transform: capitalize;
         color: transparent;
         font-weight: a.$fw-7;
         font-size: a.$main-font;
@@ -50,8 +52,8 @@
     }
     &__next {
         position: absolute;
-        bottom: 0;
-        right: 0;
+        bottom: 4rem;
+        right: 4rem;
         background-color: a.$tedx-red;
         cursor: pointer;
         height: 20rem;
