--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -4,7 +4,7 @@
 /* =========== Color ================*/
 $text-color: rgb(255, 255, 255);
 $bg-color: rgb(0, 0, 0);
-$tedx-red: rgb(230, 43, 30);
+$tedx-red: #e62b1e;
 
 
 /* =========== Font-size ================*/
@@ -37,5 +37,7 @@ $m-bot-2: 2rem;
 /* =========== Padding ================*/
 $p-1: 1rem;
 $p-2: 2rem;
+
+
 
 
