--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,1 +1,114 @@
 /********* This is for Header ***********/
+@use "../abstracts" as a;
+
+/* ========== HEADER =========== */
+.header {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  background-color: a.$bg-color;
+  transition: 0.3s;
+}
+
+/*========== NAV ==========*/
+.nav {
+  height: 3rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 3rem 0;
+  // transform: translateY(-50%);
+}
+
+@media screen and (max-width: 967px) {
+  .nav__menu {
+    position: fixed;
+    right: -100%;
+    top: 0%;
+    width: 100%;
+    height: 100vh;
+    padding: 1.5rem 0rem;
+    background-color: blue;
+    /* background-color: transparent; */
+    text-align: center;
+    transition: 0.4s;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.5);
+    border-radius: 0 0 1rem 1rem;
+    z-index: var(--z-fixed);
+    transition: 0.8s;
+  }
+}
+
+.nav-close {
+  position: absolute;
+  right: 2.5rem;
+  top: 1rem;
+  cursor: pointer;
+  font-size: 1.5rem;
+  color: var(--title-color);
+}
+.nav__list {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1.5rem;
+  align-items: center;
+  position: relative;
+}
+
+.nav__logo img {
+  width: 150px;
+  object-fit: cover;
+}
+.nav__toggle {
+  cursor: pointer;
+  font-size: 1.8rem;
+}
+.nav__link,
+.nav__toggle {
+  color: a.$text-color;
+  font-weight: a.$fw-6;
+  font-size: 1.5rem;
+}
+
+/* show Menu toggle from classList in JS */
+.show-menu {
+  right: 0;
+}
+@media screen and (min-width: 576px) {}
+
+@media screen and (min-width: 768px) {}
+
+@media screen and (min-width: 968px) {
+  .header {
+    position: fixed;
+    top: 15%;
+    left: -45%;
+    transform: rotate(-90deg);
+  }
+
+  .nav__logo {
+    display: none;
+  }
+  .nav__list {
+    flex-direction: row;
+    column-gap: 3rem;
+  }
+
+  .nav__toggle,
+  .nav-close {
+    display: none;
+  }
+}
+@media screen and (min-width: 968px) {
+}
+@media screen and (min-width: 1200px) {
+  .nav {
+    justify-content: center;
+  }
+  .header {
+    top: 50%;
+    left: -48%;
+  }
+}
