--- a/sass/layout/_sidebar.scss
+++ b/sass/layout/_sidebar.scss
@@ -1,23 +1,28 @@
 /********* This is for Sidebar ***********/
 
 @use "../abstracts" as a;
-.update {
-  @include a.flex-column;
-  &__box {
+.updates{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 1rem;
+    &__box {
     background-color: a.$tedx-red;
-    height: 30rem;
-    width: 50%;
+    height: 5rem;
+    width: 100%;
     border: 1px solid a.$tedx-red;
+    @include a.main-center;
     &--white {
       background-color: a.$text-color;
       border: 1px solid a.$text-color;
     }
   }
-  &__text {
+    &__text {
+    text-align: center;
     font-weight: 700;
-    font-size: 10rem;
-    line-height: 30rem;
-    @include a.main-center;
+    font-size: 2rem;
+    margin: auto;
     &--red {
       color: a.$tedx-red;
     }
@@ -26,4 +31,34 @@
       transform: skewX(20deg) rotate(5deg);
     }
   }
+  
 }
+
+// Media Queries
+
+@media screen and (min-width: 576px) {}
+
+@media screen and (min-width: 768px) {}
+
+@media screen and (max-width: 967px) { //Only For the round scrolling
+
+}
+
+@media screen and (min-width: 968px) { 
+.updates{
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: 0rem;
+    &__box {
+    height: 25rem;
+    width: 50%;
+  }
+    &__text {
+    font-size:10rem;
+    margin: auto;
+  }
+  
+}
+}
+
+@media screen and (min-width: 1200px) {}
