--- a/sass/pages/_team.scss
+++ b/sass/pages/_team.scss
@@ -81,10 +81,10 @@
 
 
 
-/*======== HEADER ========*/
-.header {
-  padding: 2rem 0;
-}
+// /*======== HEADER ========*/
+// .header {
+//   padding: 2rem 0;
+// }
 
 
 /*=========== MAIN ===========*/
