--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -30,7 +30,7 @@
     width: 100%;
     height: 100vh;
     padding: 1.5rem 0rem;
-    background-color: blue;
+    background-color: a.$tedx-red;
     /* background-color: transparent; */
     text-align: center;
     transition: 0.4s;
